--- a/app/assets/sass/elements/_forms.scss
+++ b/app/assets/sass/elements/_forms.scss
@@ -293,6 +293,9 @@ select {
       }
     }
   }
+  &.form-control {
+    padding-right: 22px;
+  }
 }
 
 
